tests/fixtures/invalid/float-underscore-after-point.stderr
TOML parse error at line 1, column 9
  |
1 | bad = 1._2
  |         ^
Unexpected `_`
Expected digit
While parsing a Float
